--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -11,8 +11,8 @@ html {
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -74,9 +74,23 @@ h2 {
   margin-top: 20px;
 }
 
+#apply-all-buttons button,
 .add-items input,
 .add-items button {
   padding: 10px;
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+#apply-all-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+  /*gap: 5px;*/
+}
+
+#apply-all-buttons button {
+  flex: 1;
+  width: fit-content;
+  cursor: pointer;
 }
